<resources>
    <string name="app_name" translatable="false">CncBasicsQuizApp</string>
    <string name="title_text">G code basics</string>
    <string name="greetings">Welcome</string>
    <string name="hint">Enter You`r name please</string>
    <string name="hint_name">Name</string>
    <string name="btn_start">Start</string>
    <string name="cd_quiz_image">Quiz image</string>
    <string name="img_joke">joke</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_submit_one">Go to next question</string>
    <string name="btn_submit_two">Never mind, next</string>
    <string name="btn_after_submit">Submit</string>
    <string name="result_image_desc">result image</string>
    <string name="btn_finish_quiz">try again</string>
    <string name="finish_image">finish image</string>
    <string name="iv_failed">failed image</string>
</resources>